[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypto functions or avro)
#upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev="a2da7209ed4a0da68010dcd541a25032a040b9e6", default-features = false, package = "datafusion" }
#datafusion-proto = { git = "https://github.com/apache/arrow-datafusion.git", rev="a2da7209ed4a0da68010dcd541a25032a040b9e6" }
workspace-hack = { path = "../workspace-hack"}


# TEMP test out https://github.com/apache/arrow-datafusion/pull/2891
upstream = { git = "https://github.com/alamb/arrow-datafusion.git", rev="16ecff6", default-features = false, package = "datafusion" }
datafusion-proto = { git = "https://github.com/alamb/arrow-datafusion.git", rev="16ecff6" }
